--- a/dashboard/templates/users/register_user.html
+++ b/dashboard/templates/users/register_user.html
@@ -84,13 +84,13 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'login' %}">
+      <a class="navbar-brand text-primary" href="{% url 'login' %}">
         <img src="{% static 'AdminLTE/img/logo_narco.png' %}" alt="Logo"   class="logo-img"  />
         National Ranching Company Limited
       </a>
       <!-- Toggle button for offcanvas -->
       <button
-        class="navbar-toggler"
+        class="navbar-toggler text-primary"
         type="button"
         data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasNavbar"
@@ -108,7 +108,7 @@
         aria-labelledby="offcanvasNavbarLabel"
       >
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+          <h5 class="offcanvas-title text-primary" id="offcanvasNavbarLabel">
              National Ranching Company Limited 
           </h5>
           <button
@@ -181,8 +181,6 @@
   <div class="login-container">
     <div class="login-card text-center">
       <img src="{% static 'AdminLTE/img/logo_narco.png' %}" alt="Logo" />
-      <h4  class="mb-3" >National Ranching Management System (NRMS)</h4>
-
       <div id="notification" class="alert alert-danger d-none" role="alert">
         <i class="nav-icon bi bi-exclamation-triangle-fill"></i>
         <span id="notification-message"></span> <!-- Placeholder for message -->
@@ -252,7 +250,7 @@
     </div>
   </div>
 
-  <footer class="card-footer">
+  <footer class="card-footer pt-5">
     <div class="float-end d-none d-sm-inline">Kongwa Beef Production</div>
     <strong>
       Copyright &copy; 2024&nbsp;
