--- a/Site/templates/users/register_user.html
+++ b/Site/templates/users/register_user.html
@@ -291,7 +291,7 @@ document.getElementById('register-form').addEventListener('submit', function(eve
   })
   .then(data => {
       // Redirect to login page on successful registration
-      window.location.href = "/dashboard/login/";
+      window.location.href = "/Site/login/";
   })
   .catch(error => {
       // Handle error responses and show notification
