--- a/Site/templates/home/index.html
+++ b/Site/templates/home/index.html
@@ -267,10 +267,10 @@
                   </p>
                  </a>
                  <ul class="nav nav-treeview">
-                  <li class="nav-item"> <a href="{% url 'login' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                  <li class="nav-item"> <a href="{% url 'ranch' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
                           <p>Mananing Director(MD)</p>
                       </a> </li>
-                      <li class="nav-item"> <a href="{% url 'register_user' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                      <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
                         <p>Supervisor</p>
                     </a> </li>
                     <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
@@ -516,7 +516,11 @@
               <!--end::Col-->
             </div>
             <!--end::Row-->
-            
+           
+                  </div> <!-- /.card-body -->
+              </div> <!-- /.card -->
+          </div> <!-- /.col -->
+
                   </div>
                 </div>
               </div>
