create the new app, ranch_core

--- a/Site/templates/Ranches/ranch.html
+++ b/Site/templates/Ranches/ranch.html
@@ -396,21 +396,21 @@
         </div> <!-- /.card-header -->
         <div class="card-body p-0">
           <div class="list-group h-100 w-100"> 
-            <a href="#" class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right big-icon"></i>
-              Bulls
+            <a href="#" class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right big-icon text-primary"></i>
+              <strong>Bulls</strong>
             </a>
-         <a href="#" class="list-group-item list-group-item-action">
-          <i class="nav-icon bi bi-chevron-right"></i>
-          Cows
+         <a href="#" class="list-group-item list-group-item-action text-primary">
+          <i class="nav-icon bi bi-chevron-right text-primary"></i>
+          <strong>Cows</strong>
         </a>
-          <a href="#" class="list-group-item list-group-item-action">
-            <i class="nav-icon bi bi-chevron-right"></i>
-            Calves
+          <a href="#" class="list-group-item list-group-item-action text-primary">
+            <i class="nav-icon bi bi-chevron-right text-primary"></i>
+            <strong>Calves</strong>
           </a>
-           <a href="#" class="list-group-item list-group-item-action">
-            <i class="nav-icon bi bi-chevron-right"></i>
-            Steers
+           <a href="#" class="list-group-item list-group-item-action text-primary">
+            <i class="nav-icon bi bi-chevron-right text-primary"></i>
+            <strong>Steers</strong>
           </a> 
            </div>
         </div> <!-- /.card-body -->
@@ -436,41 +436,41 @@
           </div> <!-- /.card-header -->
           <div class="card-body p-0">
             <div class="list-group h-100 w-100"> 
-              <a href="#" class="list-group-item list-group-item-action">
-                <i class="nav-icon bi bi-chevron-right big-icon"></i>
-                Birth Cattles
+        <a href="{% url 'birth_list' %}" class="list-group-item list-group-item-action text-primary">
+                <i class="nav-icon bi bi-chevron-right big-icon text-primary"></i>
+            <strong>    Birth Cattles</strong>
               </a>
-           <a href="#" class="list-group-item list-group-item-action">
-            <i class="nav-icon bi bi-chevron-right"></i>
-            Bought Cattles
+           <a href="#" class="list-group-item list-group-item-action text-primary">
+            <i class="nav-icon bi bi-chevron-right text-primary"></i>
+       <strong>Bought Cattles</strong>
           </a>
-            <a href="#" class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Complementary Cattles
+            <a href="#" class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+        <strong>Complementary Cattles</strong>
             </a>
-             <a href="#" class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Death Cattles
+             <a href="#" class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+           <strong>Death Cattles</strong>
             </a> 
-             <a class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Lost Cattles
+             <a class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+            <strong>Lost Cattles</strong>
             </a>
-            <a class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Recovered Cattles
+            <a class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+             <strong>Recovered Cattles</strong>
             </a>
-            <a class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Sold Cattles
+            <a class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+            <strong>Sold Cattles</strong>
             </a>
-            <a class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Slaughtered Cattles
+            <a class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+              <strong>Slaughtered Cattles</strong>
             </a>
-            <a class="list-group-item list-group-item-action">
-              <i class="nav-icon bi bi-chevron-right"></i>
-              Transferred Cattles
+            <a class="list-group-item list-group-item-action text-primary">
+              <i class="nav-icon bi bi-chevron-right text-primary"></i>
+              <strong>Transferred Cattles</strong>
             </a>
              </div>
           </div> <!-- /.card-body -->
