--- a/Site/templates/ListOfReg/slaughter_list.html
+++ b/Site/templates/ListOfReg/slaughter_list.html
@@ -4,7 +4,7 @@
   {% load static %}
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Narco Dashboard</title>
+    <title>NARCO NRMS | Slaughter</title>
     <!--begin::Primary Meta Tags-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
