Creating dynamic dashboard for the ranches

--- a/Site/templates/home/index.html
+++ b/Site/templates/home/index.html
@@ -267,7 +267,7 @@
                   </p>
                  </a>
                  <ul class="nav nav-treeview">
-                  <li class="nav-item"> <a href="{% url 'ranch' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                  <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
                           <p>Mananing Director(MD)</p>
                       </a> </li>
                       <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
@@ -281,9 +281,10 @@
                 </a> </li>
                 </ul>
 
+              
 
                 
-  
+
 
           <!-- The registration of events-->
             
