--- a/Site/templates/users/login.html
+++ b/Site/templates/users/login.html
@@ -5,7 +5,7 @@
     {%  load static %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>NARCO NRMS | Login</title>
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
