--- a/Site/templates/home/index.html
+++ b/Site/templates/home/index.html
@@ -267,18 +267,30 @@
                   </p>
                  </a>
                  <ul class="nav nav-treeview">
-                  <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                  <li class="nav-item"> 
+                    <a href="#" class="nav-link"> 
+                      <i class="nav-icon bi bi-circle"></i>
                           <p>Mananing Director(MD)</p>
-                      </a> </li>
-                      <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                      </a> 
+                    </li>
+                      <li class="nav-item"> 
+                        <a href="#" class="nav-link"> 
+                          <i class="nav-icon bi bi-circle"></i>
                         <p>Supervisor</p>
-                    </a> </li>
-                    <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                    </a> 
+                  </li>
+                    <li class="nav-item">
+                       <a href="#" class="nav-link">
+                         <i class="nav-icon bi bi-circle"></i>
                       <p>Ranch Manager</p>
-                  </a> </li>
-                  <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                  </a>
+                 </li>
+                  <li class="nav-item">
+                     <a href="#" class="nav-link">
+                       <i class="nav-icon bi bi-circle"></i>
                     <p>Recorder</p>
-                </a> </li>
+                </a> 
+              </li>
                 </ul>
 
               
